--- a/source/index.html
+++ b/source/index.html
@@ -11,13 +11,13 @@
   <link rel="preload" href="fonts/roboto-condensed-v19-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/roboto-condensed-v19-latin_cyrillic-700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
-<body class="page__body">
+<body class="page-body">
 
   <div class="wrap">
     <header class="header">
-      <div class="container">
-
-        <a class="header__logo" aria-label="наш логотип" href="">
+      <div class="container container--header">
+        <div class="header__menu">
+        <a class="header__logo" aria-label="наш логотип">
           <picture>
             <source media="(min-width: 768px)" srcset="img/logo.svg">
             <img class="header__logo" src="img/logo-mobile.svg" alt="Логотип">
@@ -37,6 +37,7 @@
 
           <a class="header__rqst-link" tabindex="3" href="modal.html">Заказать звонок</a>
 
+        </div>
         </div>
 
         <div class="header__text-wrap">
@@ -64,24 +65,24 @@
       <div class="container container--treangle-left container--trangle-right">
         <div class="achievements">
           <h2 class="visually-hidden"><a name="achievements" id="achievements">Преимущества</a></h2>
-          <section class="achievements__item achievements__item--watch" tabindex="6">
+          <section class="achievements__item achievements__item--watch">
 
             <h3>Оперативные сроки </h3>
             <p>Усовершенствованная логистическая система позволяет нам <br>просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
           </section>
-          <section class="achievements__item achievements__item--hired" tabindex="7">
+          <section class="achievements__item achievements__item--hired">
 
             <h3>Крупные поставщики</h3>
             <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.
             </p>
           </section>
-          <section class="achievements__item achievements__item--detective" tabindex="8">
+          <section class="achievements__item achievements__item--detective">
 
             <h3>Полная конфиденциальность</h3>
             <p>По желанию клиента <span>&nbsp;</span>мы обеспечиваем полную конфеденциальность.
             </p>
           </section>
-          <section class="achievements__item achievements__item--tag" tabindex="9">
+          <section class="achievements__item achievements__item--tag">
 
             <h3>Персонализация стоимости</h3>
             <p>Мы <span>&nbsp;</span>подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
@@ -92,7 +93,7 @@
           <h3>О компании</h3>
           <p>Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
           <p>Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог<span>..</span> <span>(РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</span></p>
-          <a href="#" aria-label="Больше информации о компании" tabindex="10">Подробнее</a>
+          <a href="#" aria-label="Больше информации о компании" tabindex="6">Подробнее</a>
         </section>
 
       </div>
@@ -101,21 +102,21 @@
           <h3>Service Device предлагает следующие товары и услуги</h3>
           <ul class="variants__list">
             <li class="variants__item variants__item--circuit">
-              <a href="#" aria-label="Производство плат" tabindex="11">
+              <a href="#" aria-label="Производство плат" tabindex="7">
                 <div>
                   <h4>Производство печатных плат</h4>
                 </div>
               </a>
             </li>
             <li class="variants__item variants__item--cpu">
-              <a href="#" aria-label="Монтаж плат" tabindex="12">
+              <a href="#" aria-label="Монтаж плат" tabindex="8">
                 <div>
                   <h4>Монтаж печатных плат</h4>
                 </div>
               </a>
             </li>
             <li class="variants__item variants__item--led">
-              <a href="#" aria-label="Комплектующие для светотехники" tabindex="13">
+              <a href="#" aria-label="Комплектующие для светотехники" tabindex="9">
                 <div>
                   <h4>Комплектующие для светотехники</h4>
                 </div>
@@ -141,21 +142,21 @@
               <div class="feedback__form-wrap">
                 <div class="feedback__name">
                   <label for="name" class="visually-hidden">Имя</label>
-                  <input type="text" name="name" id="name" placeholder="Имя" required tabindex="14">
+                  <input type="text" name="name" id="name" placeholder="Имя" required tabindex="10">
                 </div>
                 <div class="feedback__telephone">
                   <label for="phone" class="visually-hidden">Телефон</label>
-                  <input type="tel" name="phone" id="phone" placeholder="Телефон"
-                    pattern="\+7[\(]{1}[0-9]{3}[\)]{1}[-]{1}\d{3}[-]{1}\d{2}[-]{1}\d{2}" required tabindex="15">
+                  <input class="tel" type="tel" name="phone" id="phone" placeholder="Телефон"
+                    pattern="\+?[0-9\s\-\(\)]+" required tabindex="11">
                 </div>
               </div>
               <div class="feedback__text">
                 <label for="text" class="visually-hidden">Ваш вопрос</label>
-                <textarea name="text" id="text" placeholder="Ваш вопрос" tabindex="16"></textarea>
+                <textarea name="text" id="text" placeholder="Ваш вопрос" tabindex="12"></textarea>
               </div>
               <div class="feedback__button-wrap feedback__button-wrap--check">
-                <button class="feedback__submit" type="submit">Задать вопрос</button>
-                <input class="visually-hidden" id="feedback-agreement" type="checkbox" name="agreement" checked required tabindex="17">
+                <button class="feedback__submit" type="submit" tabindex="13">Задать вопрос</button>
+                <input class="visually-hidden" id="feedback-agreement" type="checkbox" name="agreement" checked required tabindex="14">
                 <label for="feedback-agreement">Я согласен на обработку персональных данных</label>
               </div>
             </form>
@@ -187,7 +188,7 @@
         </div>
 
         <div class="footer__parts-site">
-          <h3 tabindex="21">Разделы сайта</h3>
+          <h3>Разделы сайта</h3>
           <ul>
             <li><a tabindex="22" href="#">О компании</a></li>
             <li><a tabindex="22" href="#">Продукты</a></li>
@@ -200,7 +201,7 @@
         </div>
 
         <div class="footer__contact-site">
-          <h3 tabindex="28">Наш офис</h3>
+          <h3>Наш офис</h3>
           <p>г. Мытищи, Олимпийский проспект, д.10</p>
           <ul>
             <li><a tabindex="29" href="tel:+74955894050">+7 (495) 589-40-50</a></li>
@@ -236,8 +237,8 @@
         <label class="visually-hidden" for="user-name">Ваше имя</label>
         <input name="user-name" id="user-name" type="text" placeholder="Имя" required title="Введите Имя" aria-label="name" autofocus>
         <label class="visually-hidden" for="user-tel">номер телефона</label>
-        <input name="user-tel" id="user-tel" type="tel" placeholder="Телефон"
-          pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{10}$" title="Введите корректный номер телефона" required
+        <input class="tel" name="user-tel" id="user-tel" type="tel" placeholder="Телефон"
+          pattern="\+?[0-9\s\-\(\)]+" title="Введите корректный номер телефона" required
           aria-label="number">
         <div class="modal__wrap-textarea">
           <textarea name="user-question" id="user-question" rows="5" placeholder="Ваш вопрос"></textarea>
